edit week 4 homework

--- a/HSE/dl_course/week4_homework.ipynb
+++ b/HSE/dl_course/week4_homework.ipynb
@@ -1070,13 +1070,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Можно заметить, что BatchNorm лучше работает с ReLU, чем для сигмоиды"
+      ],
       "metadata": {
-        "id": "JW3fkBaSY8gG"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "JV7oka2pbIDD"
+      }
     }
   ]
 }
